# stan

./: .clang-format  .gdb_history  .gitignore  .gitignore.orig  .gitmodules  .travis.yml  C++11README  CMakeLists.txt  CONTRIBUTING.md  ErrorReportingREADME  Jenkinsfile  LICENSE.md  README.md  README.txt  RELEASE-NOTES.txt  SYNC.txt  TO-DO.txt  diff_manual.sh  dot_self_model.cpp  example.stan  gen_math_cpp.py  generateExpressionTests.py  how_to_ADSVI.md  how_to_SVI.html  how_to_SVI.md  kid.iq.txt  makefile  makefile.Jenkins  r2stan_sys.R  reduce_dependencies.txt  runTests.py  samples.csv  temp  test_expression_testing_framework.py
lib/gtest_1.7.0/: CMakeLists.txt
src/stan/gm/: CMakeLists.txt  ast.hpp  ast_def.cpp  ast_header_def_unused_attempt.hpp  ast_header_unused_attempt.hpp  command.hpp  compiler.hpp  error_codes.hpp  function_signatures.h  function_signatures.hpp  generator.hpp  gm.dox  grammars.hpp  parser.hpp
src/test/: CMakeLists.txt  cauchy_test.cpp
src/test/CmdStan/: command_test.cpp  fixed_param_sampler_test.cpp  optimization_output_test.cpp  print_test.cpp
src/test/agrad/: ad_test.cpp  agrad_eigen_test.cpp  agrad_special_functions_test.cpp  agrad_test.cpp  autodiff_test.cpp  distributions_error_handling_test.cpp  distributions_normal_test.cpp  distributions_test.cpp  distributions_uniform_test.cpp  dot_product_test.cpp  error_handling_test.cpp  fvar_matrix_test.cpp  fvar_test.cpp  hessian_test.cpp  matrix_error_handling_test.cpp  matrix_test.cpp  old_error_handling_test.cpp  partials_vari_test.cpp  special_functions_test.cpp  util.hpp
src/test/command/: print_test.cpp
src/test/diff/: agrad_test.cpp  autodiff_test.cpp  dot_product_test.cpp  fvar_matrix_test.cpp  fvar_test.cpp  operands_and_partials_test.cpp  partials_vari_test.cpp  util.hpp
src/test/expressions/: expression_test_helpers.hpp  generate.py  stan_math_sigs.expected  stan_math_sigs_exceptions.expected
src/test/file_includes/: stan_agrad_agrad_test.cpp  stan_agrad_agrad_thread_safe_test.cpp  stan_agrad_error_handling_test.cpp  stan_agrad_matrix_test.cpp  stan_agrad_partials_vari_test.cpp  stan_agrad_special_functions_test.cpp  stan_agrad_test.cpp  stan_gm_ast_test.cpp  stan_gm_command_test.cpp  stan_gm_generator_test.cpp  stan_gm_parser_test.cpp  stan_gm_test.cpp  stan_io_cmd_line_test.cpp  stan_io_csv_writer_test.cpp  stan_io_dump_test.cpp  stan_io_mcmc_writer_test.cpp  stan_io_reader_test.cpp  stan_io_test.cpp  stan_io_util_test.cpp  stan_io_var_context_test.cpp  stan_io_writer_test.cpp  stan_math_test.cpp  stan_maths_boost_error_handling_test.cpp  stan_maths_constants_test.cpp  stan_maths_error_handling_test.cpp  stan_maths_matrix_error_handling_test.cpp  stan_maths_matrix_test.cpp  stan_maths_special_functions_test.cpp  stan_maths_util_test.cpp  stan_mcmc_adapt_dense_e_nuts.cpp  stan_mcmc_adapt_dense_e_nuts_test.cpp  stan_mcmc_adapt_dense_e_static_hmc.cpp  stan_mcmc_adapt_dense_e_static_hmc_test.cpp  stan_mcmc_adapt_diag_e_nuts.cpp  stan_mcmc_adapt_diag_e_nuts_test.cpp  stan_mcmc_adapt_diag_e_static_hmc.cpp  stan_mcmc_adapt_diag_e_static_hmc_test.cpp  stan_mcmc_adapt_unit_e_nuts.cpp  stan_mcmc_adapt_unit_e_nuts_test.cpp  stan_mcmc_adapt_unit_e_static_hmc.cpp  (+111 more)
src/test/gm/: ast_test.cpp  command_init_test.cpp  command_test.cpp  compile_models_test.cpp  generator_test.cpp  parser_test.cpp
src/test/integration/: CMakeLists.txt  compile_models_fwd_test.cpp  compile_models_mix_test.cpp  compile_models_test.cpp  compile_standalone_functions_test.cpp  multiple_translation_units_test.cpp  standalone_functions_test.cpp
src/test/io/: cmd_line_test.cpp  csv_writer_test.cpp  dump_test.cpp  mcmc_writer_test.cpp  reader_test.cpp  stan_csv_reader_test.cpp  util_test.cpp  writer_test.cpp
src/test/math/: .#old_error_handling_test.cpp  .#old_matrix_test.cpp  CMakeLists.txt  constants_test.cpp  error_handling_test.cpp  matrix_error_handling_test.cpp  matrix_test.cpp  old_error_handling_test.cpp  old_matrix_test.cpp  rep_array_test.cpp  rep_row_vector_test.cpp  rep_vector_test.cpp  special_functions_test.cpp
src/test/maths/: constants_test.cpp  error_handling_test.cpp  matrix_test.cpp  special_functions_test.cpp
src/test/mcmc/: base_adapter_test.cpp  base_hmc_test.cpp  base_nuts_test.cpp  base_static_hmc_test.cpp  chains_test.cpp  convergence_test.cpp  covar_adaptation_test.cpp  covar_adapter_test.cpp  dense_e_metric_test.cpp  derived_nuts_test.cpp  diag_e_metric_test.cpp  fixed_param_sampler_test.cpp  mcmc_output_test.cpp  mock_hmc.hpp  persistent_sampler_test.cpp  sample_test.cpp  stepsize_adaptation_test.cpp  stepsize_adapter_test.cpp  unit_e_metric_test.cpp  var_adaptation_test.cpp  var_adapter_test.cpp
src/test/memory/: stack_alloc_test.cpp
src/test/meta/: traits_test.cpp
src/test/model/: util_test.cpp
src/test/models/: command2.data.R  command_init.Rdata  command_test.cpp  function_signatures_test.cpp  model_test_fixture.hpp  temp_test.cpp  utility.hpp
src/test/performance/: logistic_test.cpp  ode_twoCmtOral_test.cpp  plot_performance.R  utility.hpp
src/test/prob/: ar1.csv  autocorrelation_test.cpp  autocovariance_test.cpp  distributions_bernoulli_test.cpp  distributions_beta_binomial_test.cpp  distributions_beta_test.cpp  distributions_binomial_test.cpp  distributions_categorical_test.cpp  distributions_cauchy_test.cpp  distributions_chi_square_test.cpp  distributions_dirichlet_test.cpp  distributions_double_exponential_test.cpp  distributions_error_handling_test.cpp  distributions_exponential_test.cpp  distributions_gamma_test.cpp  distributions_hypergeometric_test.cpp  distributions_inv_chi_square_test.cpp  distributions_inv_gamma_test.cpp  distributions_inv_wishart_test.cpp  distributions_logistic_test.cpp  distributions_lognormal_test.cpp  distributions_multi_normal_test.cpp  distributions_multinomial_test.cpp  distributions_neg_binomial_test.cpp  distributions_normal_test.cpp  distributions_pareto_test.cpp  distributions_poisson_test.cpp  distributions_scaled_inv_chi_square_test.cpp  distributions_student_t_test.cpp  distributions_test.cpp  distributions_uniform_test.cpp  (+15 more)
(+21849 files in other folders)
